first iteration feature

--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -8,7 +8,7 @@ Try out different styling on this page before using it globally
 %br 
 Add explanatory and appealing text here! 
 %br
-Users must have GitHub account,  or Facebook account 
+Users must have GitHub account (for now)
 %br
 Name and email must be publicly available on profile 
 %br
